package com.masterarbeit;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class AnonymizerApplication {
	public static void main(String[] args) {
		SpringApplication.run(AnonymizerApplication.class, args);
	}
}
