@startuml

title __VALIDATOR's Class Diagram__\n

  package com.masterarbeit {
    class AnonymizerApplication {
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class BoolComp {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class CompareService {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class Comparer {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      interface ComparerInterface {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.dbOperations {
      class DatabaseOperations {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class DateComp {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class DoubleComp {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class InsuranceNumberComp {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class IntegerComp {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.entities {
      class Patient {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.repositories {
      interface PatientAnonymRepository {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.repositories {
      interface PatientRepository {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.entities {
      class Patient_anonym {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.repositories {
      interface QupSapRepository {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.repositories {
      interface SapRepository {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class Sigma {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.compare {
      class StringComp {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.controller {
      class ValidatorController {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.controller {
      class ViewController {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.entities {
      class qup_sap {
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.entities {
      class sap {
      }
    }
  }
  

  BoolComp -up-|> ComparerInterface
  CompareService o-- IntegerComp : intCompare
  CompareService o-- DateComp : dateCompare
  CompareService o-- DoubleComp : doubleCompare
  CompareService o-- InsuranceNumberComp : insuranceNumberComp
  CompareService o-- StringComp : stringCompare
  CompareService o-- BoolComp : boolComp
  CompareService o-- Comparer : comp
  Comparer -up-|> ComparerInterface
  Comparer o-- IntegerComp : intComp
  Comparer o-- DoubleComp : doubleComp
  Comparer o-- DateComp : dateComp
  Comparer o-- StringComp : stringComp
  Comparer o-- BoolComp : boolComp
  DateComp -up-|> ComparerInterface
  DateComp o-- IntegerComp : integerComp
  DoubleComp -up-|> ComparerInterface
  DoubleComp o-- IntegerComp : integerComp
  InsuranceNumberComp -up-|> ComparerInterface
  InsuranceNumberComp o-- IntegerComp : integerComp
  InsuranceNumberComp o-- DateComp : dateComp
  IntegerComp -up-|> ComparerInterface
  StringComp -up-|> ComparerInterface
  StringComp o-- IntegerComp : integerComp
  StringComp o-- InsuranceNumberComp : insuranceNumberComp
  ValidatorController o-- PatientRepository : patientRepository
  ValidatorController o-- PatientAnonymRepository : patientAnonymRepository
  ViewController o-- PatientRepository : patientRepository
  ViewController o-- PatientAnonymRepository : patientAnonymRepository
  ViewController o-- SapRepository : sapRepository
  ViewController o-- QupSapRepository : qupSapRepository
  ViewController o-- CompareService : compareService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
